src/components/organisms/Footer/Footer.scss
@use '../../../styles/utils/variables' as var;
@use '../../../styles/utils/typography' as *;
@use '../../../styles/utils/mixins' as mix;

.footer {
  display: flex;
  flex-direction: column;
  gap: 32px;
  align-items: center;
  justify-content: space-between;
  width: 320px;
  height: 257px;
  padding: 32px 16px;
  background-color: var.$color-white;
  box-shadow: 0 -1px 0 0 var.$color-elements;

  @include mix.on-tablet {
    flex-direction: row;
    width: 100%;
    height: 96px;
    padding: 32px 152px;
  }

  &__list {
    display: flex;
    flex-direction: column;
    gap: 16px;

    @include mix.on-tablet {
      flex-direction: row;
      gap: 64px;
    }
  }

  &__item {
    @extend %uppercase;

    cursor: pointer;
    color: var.$color-secondary;

    a {
      color: var.$color-secondary;
      text-decoration: none !important;

      &:hover {
        text-decoration: underline;
      }
    }
  }

  &__top-button {
    @extend %buttons;
  }
}

